tests/compile-fail/integration__integration__general__unknown_instr_signature.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: signature not known for ANM opcode 6000
   ┌─ <input>:29:9
   │
29 │         ins_6000(0, 0, 0);
   │         ^^^^^^^^ signature not known
   │
   = try adding this instruction's signature to your mapfiles


